--- a/Front - Proyecto/src/Administrativo/Admin - Inicio.html
+++ b/Front - Proyecto/src/Administrativo/Admin - Inicio.html
@@ -102,9 +102,9 @@
                 </div>
             </a>
 
-            <a href="/src/Administrativo/VerificarBiologo/Solicitudes.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
-            <a href="/src/Administrativo/Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
-            <a href="/src/Administrativo/CRUD'S/Estudiante.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
+            <a href="VerificarBiologo/Solicitudes.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
+            <a href="Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
+            <a href="CRUD'S/Estudiante.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
         </div>
         <hr class="">
     </nav>
