--- a/Front - Proyecto/src/Administrativo/CRUD'S/Administrativos.html
+++ b/Front - Proyecto/src/Administrativo/CRUD'S/Administrativos.html
@@ -85,17 +85,7 @@
                 <img class="object-cover h-[68px] top-[13.3px] lg:ml-[24px]  xl:ml-[24px] 2xl:ml-[24px] absolute hidden lg:block xl:Block" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-3.png?raw=true" />
                 <h1 class="text-[#FFFFFF] text-2xl ml-12 hidden lg:block xl:block">Flora y Fauna UTP</h1> <!--Titulo-->
             </div>
-            <!--
-            <div class="flex items-center" id="busqueda">
-            <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-1.png?raw=true" class="absolute xl:ml-[32rem] lg:ml-[30rem] md:ml-[22rem] lg:block md:block xl:block ml-[10rem] hidden h-5">
-            <img id="lupita" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="block md:hidden lg:hidden xl:hidden h-6 ml-2" alt="">
-            <input type="search" class="bg-[#F0FEF8] xl:h-10 lg:h-10 h-8 rounded-[30px] xl:w-[32rem] lg:w-[30rem] md:w-[22rem] w-[10rem] ml-8 hidden lg:block xl:block md:block border-none object-cover text-slate-500 p-3 hover:bg-[#ffffff] focus:outline-none" placeholder="Buscar">
-            </div>
-            
-            <div class="flex justify-around items-center">
-                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/administrador.png?raw=true" class="w-[42px] h-[42px] lg:w-[64px] lg:h-[64px]" alt="user icon">
-            </div>
-            -->
+
             <div class="pl-7 lg:pl-5 w-full flex justify-around items-center lg:hidden"> <!--Contendor de filtro y botones de acciones-->
                 <div class="flex items-center" id="busqueda">
                     <img id="lupota" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/lupa%20blanca.png?raw=true" class="absolute md:ml-[22rem] block ml-[10rem] h-5">
@@ -127,46 +117,40 @@
                             <p class="ml-4">Inicio</p>
                         </div>
                     </a>
-                    <a href="Estudiante.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Estudiante.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-4 ml-1" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/estudiantes_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-5">Estudiantes</p>
                         </div>
                     </a>
-                    <a href="Biologo.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Biologo.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/biologo_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Biologos</p>
                         </div>
                     </a>
-                    <a href="Administrativos.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Administrativos.html" class="">
                         <div class="p-2 bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-4 ml-1" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/admin_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-5">Administrativos</p>
                         </div>
                     </a>
-                    <a href="Flora.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Flora.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/flora_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Flora</p>
                         </div>
                     </a>
-                    <a href="Fauna.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Fauna.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-7" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/fauna_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-3">Fauna</p>
                         </div>
                     </a>
-                    <a href="Publicaciones.html" class="">
+                    <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Publicaciones.html" class="">
                         <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
                             <img class="w-5 ml-0.5" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/pub_cruds.png?raw=true" alt="icono-estudiante">
                             <p class="ml-4">Publicaciones</p>
-                        </div>
-                    </a>
-                    <a href="Comentarios.html" class="">
-                        <div class="p-2 hover:bg-[#7EBBAA] flex items-center rounded-md">
-                            <img class="w-6" src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/comentarios_cruds.png?raw=true" alt="icono-estudiante">
-                            <p class="ml-4">Comentarios</p>
                         </div>
                     </a>
                 </div>
@@ -197,7 +181,7 @@
                 
             </div>
             <!-- Contenedor de la tabla y sus datos -->
-            <div class="relative top-8 lg:top-0 max-h-[40vh] px-5 min-h-[35rem] sm:min-h-[50rem] md:min-h-[36rem] md:max-h-[40rem] lg:max-h-[32rem] lg:min-h-[30rem] xl:max-h-[34rem] xl:min-h-[30rem] ml-6 bg-[#F0F9FF] mt-8 rounded-md shadow-md overflow-auto mr-10 mb-8 contenedor_datos text-[14px] md:text-[16px] lg:text-[16px] xl:text-[16px] 2xl:text-[18px]">
+            <div class="relative top-8 lg:top-0 max-h-[40vh] px-5 min-h-[35rem] sm:min-h-[38rem] md:min-h-[36rem] md:max-h-[40rem] lg:max-h-[32rem] lg:min-h-[30rem] xl:max-h-[34rem] xl:min-h-[30rem] ml-6 bg-[#F0F9FF] mt-8 rounded-md shadow-md overflow-auto mr-10 mb-8 contenedor_datos text-[14px] md:text-[16px] lg:text-[16px] xl:text-[16px] 2xl:text-[18px]">
                 <table id="añadir_datos" class="w-full border-collapse">
                     <thead>
                         <tr class="h-12">
