--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/Rechazados.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/Rechazados.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solicitudes rechazadas</title>
-    <link rel="stylesheet" href="/src/Administrativo/output.css">
+    <link rel="stylesheet" href="output.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -137,15 +137,15 @@
 
     <nav class="fixed lg:top-[5.4rem] top-[4.7rem] md:px-10 w-full z-[1] lg:bg-white bg-[#F8F5F5]">
         <div class="flex md:text-[16px] text-[12.5px] justify-around mt-2 mb-2 h-[2.5rem] md:h-auto">
-            <a href="/src/Administrativo/Admin - Inicio.html" class="hover:bg-[#D7EFFF] md:p-1 md:px-4 rounded-[50px] lg:block hidden">
+            <a href="/Front - Proyecto/src/Administrativo/Admin - Inicio.html" class="hover:bg-[#D7EFFF] md:p-1 md:px-4 rounded-[50px] lg:block hidden">
                 <div class="flex items-center">
                     <img src="https://raw.githubusercontent.com/saunpain/FloraFaunaUTP/50daf7ed36a5a8015d324c85c61abd28b9c2f15a/img/home-03.svg">
                     <p class="lg:ml-2">Inicio</p>
                 </div>
             </a>
-            <a href="/src/Administrativo/VerificarBiologo/Rechazados.html" class="hover:bg-[#D7EFFF] bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
-            <a href="/src/Administrativo/Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
-            <a href="/src/Administrativo/CRUD'S/Estudiante.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
+            <a href="Rechazados.html" class="hover:bg-[#D7EFFF] bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
+            <a href="/Front - Proyecto/src/Administrativo/Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
+            <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Estudiante.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
         </div>
         <hr class="">
     </nav>
@@ -465,7 +465,7 @@
         </section>                                                                  <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="/Front - Proyecto/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
