--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/Solicitudes.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/Solicitudes.html
@@ -131,16 +131,16 @@
     </div>
     <nav class="fixed lg:top-[5.4rem] top-[4.7rem] md:px-10 w-full z-[1] lg:bg-white bg-[#F8F5F5]">
         <div class="flex md:text-[16px] text-[12.5px] justify-around mt-2 mb-2 h-[2.5rem] md:h-auto">
-            <a href="/src/Administrativo/Admin - Inicio.html" class="hover:bg-[#D7EFFF] md:p-1 md:px-4 rounded-[50px] lg:block hidden">
+            <a href="/Front - Proyecto/src/Administrativo/Admin - Inicio.html" class="hover:bg-[#D7EFFF] md:p-1 md:px-4 rounded-[50px] lg:block hidden">
                 <div class="flex items-center">
                     <img src="https://raw.githubusercontent.com/saunpain/FloraFaunaUTP/50daf7ed36a5a8015d324c85c61abd28b9c2f15a/img/home-03.svg">
                     <p class="lg:ml-2">Inicio</p>
                 </div>
             </a>
 
-            <a href="/src/Administrativo/VerificarBiologo/Solicitudes.html" class="hover:bg-[#D7EFFF] bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
-            <a href="/src/Administrativo/Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
-            <a href="/src/Administrativo/CRUD'S/Estudiante.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
+            <a href="Solicitudes.html" class="hover:bg-[#D7EFFF] bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
+            <a href="/Front - Proyecto/src/Administrativo/Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
+            <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Estudiante.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
         </div>
     </nav>
     
@@ -148,7 +148,7 @@
         <div class="mt-5 ml-10 mr-10">
             <div class="flex items-center mb-3">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/home-white.png?raw=true">
-                <a href="/src/Administrativo/Admin - Inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
+                <a href="/Front - Proyecto/src/Administrativo/Admin - Inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
             </div>
             
             <div class="grid rounded-[10px] p-1">
@@ -461,7 +461,7 @@
         </section>                                                                  <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="/Front - Proyecto/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
