--- a/Front - Proyecto/src/Auth/login.html
+++ b/Front - Proyecto/src/Auth/login.html
@@ -4,48 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iniciar sesion</title>
-  <link href="output.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-gray-100">
   <div class="min-h-screen flex flex-col justify-center items-center">
-    <div class="w-full max-w-md p-6 shadow-lg bg-[#276B58] rounded-lg">
-      <div class="relative">
-        <i class="fa-solid fa-circle-xmark text-white opacity-70 absolute top-0 right-0 m-4"></i>          
+    <div class="w-full p-6 shadow-lg bg-[#276B58] rounded-lg">
+      <div class="flex justify-between">
+          <h1 class="md:text-2xl text-xl text-white font-semibold mb-5">Iniciar Sesión</h1>
+          <button onclick="cerrarLogin()" class="-mt-5">
+            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_square_duotone.png?raw=true" alt="cerrar" class="h-10 w-10">
+          </button>
+
       </div>
-        <div class="flex items-center mb-4">
-            <div class="mr-4">
-                <i class="fa-solid fa-user text-white text-xl"></i>
-            </div>
-            <h1 class="text-xl md:text-2xl lg:text-2xl font-semibold text-white mt-2 mb-2">
-              Iniciar sesión
-            </h1>
+        <div class="mt-5">
+            <input type="text" id="nombreusuario" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Nombre de usuario">
         </div>
-        <div class="mt-4">
-            <input type="text" id="nombreusuario" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm" placeholder="Nombre de usuario">
+        <div class="mt-5">
+            <input type="password" id="password" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Ingresa tu contraseña...">
         </div>
-        <div class="mt-4">
-            <input type="password" id="nombreusuario" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm" placeholder="Ingresa tu contraseña...">
-        </div>
-        <div class="mt-4 text-center" >
-            <button type="submit" class="mt-2 mb-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full mx-auto hover:bg-transparent hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base">
+        <div class="mt-6 text-center" >
+            <button type="submit" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:bg-transparent hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
                 Iniciar sesión
             </button>
         </div>
         <div class="mt-4 flex flex-col items-start mb-4">
-            <div class="mb-2">
-                <label class="text-white text-xxs md:text-xs lg:text-sm">
-                    <a href="">¿Has olvidado tu contraseña?</a>
-                </label>
-            </div>
-            <div>
-                <a href="" class="text-white text-xxs md:text-xs lg:text-sm">
+            <button id="" onclick="mostrarR1(event)" class="mb-4">
+              <a href="#" class="text-white text-[10px] md:text-xs lg:text-sm hover:underline cursor-pointer hover:text-[#c6d7d2]">¿Has olvidado tu contraseña?</a>
+            </button>
+            <button id="registrarse" onclick="mostrarRegistro(event)">
+                <a href="#" class="text-white text-[10px] md:text-xs lg:text-sm hover:underline cursor-pointer hover:text-[#c6d7d2]">
                     ¿Primera vez en Flora y Fauna UTP? ¡Regístrate ahora!
                 </a>
-            </div>
-
+            </button>
         </div>
     </div>
   </div>
+  <script src="/Front - Proyecto/src/index.js"></script>
 </body>>
 </html>
