--- a/Front - Proyecto/src/Auth/login.html
+++ b/Front - Proyecto/src/Auth/login.html
@@ -22,7 +22,7 @@
             <input type="password" id="password" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Ingresa tu contraseña...">
         </div>
         <div class="mt-6 text-center" >
-            <button type="submit" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:bg-transparent hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
+            <button onclick="loginUser()" type="submit" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:bg-transparent hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
                 Iniciar sesión
             </button>
         </div>
@@ -38,6 +38,6 @@
         </div>
     </div>
   </div>
-  <script src="/Front - Proyecto/src/index.js"></script>
+  <script src="auth.js"></script>
 </body>>
 </html>
