--- a/Front - Proyecto/src/Auth/Registro.html
+++ b/Front - Proyecto/src/Auth/Registro.html
@@ -4,7 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro de Usuario</title>
-
+  <style>
+    @media only screen and (min-width: 340px) and (max-width: 350px){
+        #ojito{
+            margin-left: 16rem;
+        }
+    }
+    @media only screen and (min-width: 350px) and (max-width: 360px){
+        #ojito{
+            margin-left: 16.5rem;
+        }
+    }
+    @media only screen and (min-width: 360px) and (max-width: 370px){
+        #ojito{
+            margin-left: 17rem;
+        }
+    }
+    @media only screen and (min-width: 370px) and (max-width: 380px){
+        #ojito{
+            margin-left: 18rem;
+        }
+    }
+    @media only screen and (min-width: 380px) and (max-width: 400px){
+        #ojito{
+            margin-left: 19rem;
+        }
+    }
+    @media only screen and (min-width: 400px) and (max-width: 768px){
+        #ojito{
+            margin-left: 20rem;
+        }
+    }
+  </style>
 </head>
 <body class="">
   <div class="min-h-screen flex flex-col justify-center items-center h-[24rem]">
@@ -20,25 +51,22 @@
 
         <div class="mt-2 ml-1">
           <table class="px-10 py-5 w-full h-16 rounded-md bg-white bg-opacity-15 text-xs md:text-sm lg:text-base font-bold align-middle">
-            <tbody class="">
+            <tbody>
               <tr>
                 <td>
-                  <input id="PerfilEstudiante" type="radio" class="ml-5">
-                  <label for="PerfilEstudiante"  class="text-white">Estudiante</label>
+                  <input id="PerfilEstudiante" type="radio" class="ml-5" name="perfil">
+                  <label for="PerfilEstudiante" class="text-white">Estudiante</label>
                 </td>
               </tr>
               <tr>
                 <td>
-                  <input id="PerfilBiologo" type="radio" class="ml-5">
-                  <label for="PerfilBiologo"  class="text-white">Biólogo</label>
+                  <input id="PerfilBiologo" type="radio" class="ml-5" name="perfil">
+                  <label for="PerfilBiologo" class="text-white">Biólogo</label>
                 </td>
               </tr>
             </tbody>
-            
           </table>
         </div>
-        
-      </div>
       <div class="mt-4 ml-1">
         <label class="text-white text-sm">Ingrese su correo electrónico</label>
         <input type="text" id="correoUsuario" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold tracking-normal text-left text-white placeholder-white placeholder-opacity-[0.75] focus:outline-none mt-2" placeholder="Correo electrónico" required>
@@ -49,10 +77,14 @@
       </div>
       <div class="mt-4 ml-1">
         <label class="text-white text-sm">Ingrese su contraseña</label>
-        <input type="password" id="contrasena" class="mt-2 p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold tracking-normal text-left text-white placeholder-white  placeholder-opacity-[0.75] focus:outline-none" placeholder="Contraseña" required>
+        <div class="flex items-center">
+          <input type="password" id="contrasena" class="mt-2 p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold tracking-normal text-left text-white placeholder-white  placeholder-opacity-[0.75] focus:outline-none" placeholder="Contraseña" required>
+          <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/OjoClose.png?raw=true" id="ojito" onclick="VerOcultar()" class="flex absolute cursor-pointer mt-2 md:ml-[22rem]">
+        </div>
       </div>
+      <p id="mensaje2" class="w-auto p-2 m-1 text-[#e28686] text-[10px] md:text-xs lg:text-sm"></p>
       <div class="mt-6 text-center">
-        <button type="submit" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:bg-transparent hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
+        <button onclick="RegistrarUsuario(perfilUser())" type="submit" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
           Registrarse
         </button>
       </div>
