--- a/Front - Proyecto/src/Auth/login.html
+++ b/Front - Proyecto/src/Auth/login.html
@@ -6,6 +6,7 @@
   <title>Iniciar sesion</title>
 </head>
 <body class="bg-gray-100">
+  
   <div class="min-h-screen flex flex-col justify-center items-center">
     <div class="w-full p-6 shadow-lg bg-[#276B58] rounded-lg">
       <div class="flex justify-between">
@@ -18,11 +19,13 @@
         <div class="mt-5">
             <input type="text" id="nombreusuario" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Nombre de usuario">
         </div>
-        <div class="mt-5">
-            <input type="password" id="password" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Ingresa tu contraseña...">
+        <div class="flex items-center mt-5">
+          <input type="password" id="password" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Ingresa tu contraseña...">
+          <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/OjoClose.png?raw=true" id="eye" onclick="OcultarVer()" class="flex absolute cursor-pointer ml-[13rem] md:ml-[16rem] lg:ml-[19rem]">
         </div>
+        <p id="mensaje" class="w-auto p-2 m-1 text-[#e28686] text-[10px] md:text-xs lg:text-sm"></p>
         <div class="mt-6 text-center" >
-            <button onclick="loginUser()" type="submit" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:bg-transparent hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
+            <button onclick="loginUser()" type="submit" class="mt-2 bg-white bg-opacity-15 text-white py-2 px-4 rounded-full hover:text-ind font-bold opacity-70 text-xs md:text-sm lg:text-base active:bg-[#50a48c] hover:bg-[#5e9f9f]">
                 Iniciar sesión
             </button>
         </div>
@@ -31,7 +34,7 @@
               <a href="#" class="text-white text-[10px] md:text-xs lg:text-sm hover:underline cursor-pointer hover:text-[#c6d7d2]">¿Has olvidado tu contraseña?</a>
             </button>
             <button id="registrarse" onclick="mostrarRegistro(event)">
-                <a href="#" class="text-white text-[10px] md:text-xs lg:text-sm hover:underline cursor-pointer hover:text-[#c6d7d2]">
+                <a href="#" class="text-white text-[10px] md:text-xs lg:text-sm hover:underline hover:bg-transparent cursor-pointer hover:text-[#c6d7d2]">
                     ¿Primera vez en Flora y Fauna UTP? ¡Regístrate ahora!
                 </a>
             </button>
