--- a/Front - Proyecto/src/Usuario/Usuario - Inicio.html
+++ b/Front - Proyecto/src/Usuario/Usuario - Inicio.html
@@ -58,7 +58,7 @@
     }
     </style>
 </head>
-<body class="bg-white w-full h-full box-border inicio">
+<body class="bg-white w-full h-full box-border inicio" onload="ObtenerEstudiante()">
     <header class="w-full bg-[#276B58] fixed z-[2]">
         <div class="flex items-center justify-between px-4 py-2 ">
             <div class="flex items-center md:ml-4 ">
@@ -84,7 +84,7 @@
                 </button>
                 <button id="mostrarPerfil">
                     <a href="">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/User_cicrle_light.png?raw=true" alt="user icon">
+                        <img id="imgPerfil" alt="user" class="w-12 h-12 rounded-full ml-2">
                     </a>
                 </button>
             </div>
@@ -506,6 +506,7 @@
         </div>                                                                    <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
+    <script src="perfil.js"></script>
     <script src="/Front - Proyecto/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
