--- a/Front - Proyecto/src/Administrativo/Admin - Inicio.html
+++ b/Front - Proyecto/src/Administrativo/Admin - Inicio.html
@@ -58,7 +58,7 @@
     }
     </style>
 </head>
-<body class="bg-white w-full h-full box-border inicio">
+<body class="bg-white w-full h-full box-border inicio" onload="ObtenerAdmin()">
     <header class="w-full bg-[#276B58] fixed z-[2]">
         <div class="flex items-center justify-between px-4 py-2 ">
             <div class="flex items-center md:ml-4 ">
@@ -77,7 +77,7 @@
             
             <button id="mostrarPerfil">
                 <a href="">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/User_cicrle_light.png?raw=true" alt="user icon">
+                    <img id="imgPerfil" alt="user" class="w-12 h-12 rounded-full ml-2">
                 </a>
             </button>
         </div>
@@ -93,7 +93,7 @@
         </div>
     </div>
     
-    <nav class="fixed lg:top-[5.4rem] top-[4.7rem]  md:px-10 w-full z-[1] lg:bg-white bg-[#F8F5F5]">
+    <nav class="fixed lg:top-[5.4rem] top-[4rem]  md:px-10 w-full z-[1] lg:bg-white bg-[#F8F5F5]">
         <div class="flex md:text-[16px] text-[12.5px] justify-around mt-2 mb-2 h-[2.5rem] md:h-auto">
             <a href="Admin - Inicio.html" class="hover:bg-[#D7EFFF] bg-[#D7EFFF] md:p-1 md:px-4 rounded-[50px] lg:block hidden">
                 <div class="flex items-center">
@@ -524,6 +524,7 @@
         </div>                                                                    <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
+    <script src="perfil_admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
     <script src="/Front - Proyecto/src/index.js"></script>
 </body>
