--- a/Front - Proyecto/src/Usuario/Publicacion.html
+++ b/Front - Proyecto/src/Usuario/Publicacion.html
@@ -85,7 +85,7 @@
                 </button>
                 <button id="mostrarPerfil">
                     <a href="">
-                        <img id="imgPerfil" alt="user" class="w-12 h-12 rounded-full ml-2">
+                        <img id="imgPerfil" alt="user" class="w-12 h-12 ml-2">
                     </a>
                 </button>
             </div>
