--- a/Front - Proyecto/src/Administrativo/Admin - Inicio.html
+++ b/Front - Proyecto/src/Administrativo/Admin - Inicio.html
@@ -269,196 +269,7 @@
             </div>
         </section>                                                                                                                 <!--lg:w-[23rem] xl:w-[52%] xl:max-w-[58%] 2xl:min-w-[58%] 2xl:w-[60%]-->
         <section id="pub" class="bg-[#F8F5F5] relative flex flex-col items-center top-32 md:top-24 md:py-8 lg:top-[130px] w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:ml-[5rem] xl:ml-[6rem] mr-5"> <!--Publicaciones-->
-            <div id="nasua" class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
-                <div class="mt-2">
-                    <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">PepeGanga</span>
-                    <span class="textito text-gray-400 md:ml-6 ml-4 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/15</span>
-                    <span class="textito text-gray-400 float-right md:ml-10 lg:mr-0 md:mr-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">Campus Levi Sasso</span>
-                    <div class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px] mt-2">
-                        <span id="comentario-1">Me encontré un gato solo saliendo de la U. Se llama pansito</span>
-                        <input type="text" id="input-1" class="hidden w-full mb-2" disabled/>
-                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                            <button id="guardar-1" class="hidden focus:outline-none" onclick="guardarCambios('1')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi_Color.png?raw=true" alt="Enviar">
-                            </button>
-                            <div class="absolute bg-white border rounded -ml-5 w-[8rem] p-1" x-show="open" @click.away="open = false">
-                                <p>Guardar cambios</p>
-                            </div>
-                        </div>
-                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                            <button id="cancelar-1" class="hidden focus:outline-none" onclick="cancelarEdicion('1')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o_Color.png?raw=true" alt="Cancelar">
-                            </button>
-                            <div class="absolute bg-white border rounded p-1" x-show="open" @click.away="open = false">
-                                <p>Cancelar</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a href="Publicacion.html">
-                    <div class="flex justify-center mt-5 mb-5">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-7.png?raw=true" class="xl:max-h-[370px] xl:max-w-[490px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
-                    </div>
-                </a>
-                <div class="flex justify-around items-center mb-2">
-                    <div class="flex items-center">
-                        <div class="flex items-center">
-                            <button id="1" class="w-6 lg:w-6 lg:h-6" onclick="DarLike('1')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="w-5 h-5 lg:w-6 lg:h-6">
-                            </button>
-                            <span class="textito font-bold text-[#241111] xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px] ml-1">35</span>
-                        </div>
-                        <a href="Publicacion.html">
-                            <button class="w-6 lg:w-6 lg:h-6 flex mr-5">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 ml-2">
-                                <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">14</span>
-                            </button>
-                        </a>
-                        <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Nasua</span>
-                        <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 xl:mr-10 mr-10">Animal: Gato solo</span>
-                    </div>
-                    <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                        <button class="top-1 right-3 relative " @click="open = !open">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true">
-                        </button>
-                        <div class="absolute bg-white border rounded -mt-3 -ml-36" x-show="open" @click.away="open = false">
-                            <button class="block w-[11rem]" onclick="editarComentario('1')">
-                                <a class="flex px-2 py-1 text-sm">
-                                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Edit.png?raw=true" alt="" class="h-4 w-4 ml-2 mr-2">
-                                    <p>Editar comentario</p>
-                                </a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div  class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
-                <div class="mt-2">
-                    <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">UsuarioPromedioFisc</span>
-                    <span class="textito text-gray-400 md:ml-6 ml-4 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/13</span>
-                    <span class="textito text-gray-400 float-right md:ml-10 lg:mr-0 md:mr-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">Campus Levi Sasso</span>
-                    <div class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px] mt-2">
-                        <span id="comentario-2">Me encontré a este pequeño en los senderos de la UTP. ¿No es lindo?</span>
-                        <input type="text" id="input-2" class="hidden w-full mb-2" disabled/>
-                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                            <button id="guardar-2" class="hidden focus:outline-none" onclick="guardarCambios('2')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi_Color.png?raw=true" alt="Enviar">
-                            </button>
-                            <div class="absolute bg-white border rounded -ml-5 w-[8rem] p-1" x-show="open" @click.away="open = false">
-                                <p>Guardar cambios</p>
-                            </div>
-                        </div>
-                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                            <button id="cancelar-2" class="hidden focus:outline-none" onclick="cancelarEdicion('2')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o_Color.png?raw=true" alt="Cancelar">
-                            </button>
-                            <div class="absolute bg-white border rounded p-1" x-show="open" @click.away="open = false">
-                                <p>Cancelar</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a href="Publicacion.html">
-                    <div class="flex justify-center mt-5 mb-5">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Oso-Hormiguero.png?raw=true" class="xl:max-h-[370px] xl:max-w-[490px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
-                    </div>
-                </a>
-                <div class="flex justify-around items-center mb-2">
-                    <div class="flex items-center">
-                        <div class="flex items-center">
-                            <button id="1" class="w-6 lg:w-6 lg:h-6" onclick="DarLike('2')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="w-5 h-5 lg:w-6 lg:h-6">
-                            </button>
-                            <span class="textito font-bold text-[#241111] xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px] ml-1">35</span>
-                        </div>
-                        <a href="Publicacion.html">
-                            <button class="w-6 lg:w-6 lg:h-6 flex mr-5">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 ml-2">
-                                <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">14</span>
-                            </button>
-                        </a>
-                        <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Vermilinguos</span>
-                        <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 xl:mr-10 mr-10">Animal: Oso hormiguero</span>
-                    </div>
-                    <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                        <button class="mt-2" @click="open = !open">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true" class="xl:mr-10">
-                        </button>
-                        <div class="absolute bg-white border rounded -mt-3 -ml-28" x-show="open" @click.away="open = false">
-                            <button class="block w-[8rem]" onclick="editarComentario('2')">
-                                <a class="flex px-2 py-1 text-sm">
-                                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Edit.png?raw=true" alt="" class="h-4 w-4 ml-2 mr-2">
-                                    <p>Editar título</p>
-                                </a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
             
-            <div class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
-                <div class="mt-2">
-                    <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">PepeGanga</span>
-                    <span class="textito text-gray-400 md:ml-6 ml-4 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/15</span>
-                    <span class="textito text-gray-400 float-right md:ml-10 md:mr-6 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1 lg:mr-0 xl:ml-10 xl:mr-10">Campus Levi Sasso</span>
-                    <div class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px] mt-2">
-                        <span id="comentario-3">Esta magnífica ave se encuentra en los aldedores de la bilibioteca central de la UTP.</span>
-                        <input type="text" id="input-3" class="hidden w-full mb-2" disabled/>
-                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                            <button id="guardar-3" class="hidden focus:outline-none" onclick="guardarCambios('3')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi_Color.png?raw=true" alt="Enviar">
-                            </button>
-                            <div class="absolute bg-white border rounded -ml-5 w-[8rem] p-1" x-show="open" @click.away="open = false">
-                                <p>Guardar cambios</p>
-                            </div>
-                        </div>
-                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                            <button id="cancelar-3" class="hidden focus:outline-none" onclick="cancelarEdicion('3')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o_Color.png?raw=true" alt="Cancelar">
-                            </button>
-                            <div class="absolute bg-white border rounded p-1" x-show="open" @click.away="open = false">
-                                <p>Cancelar</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <a href="/src/Publicacion.html">
-                    <div class="flex justify-center mt-5 mb-5">
-                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Colibri.png?raw=true" class="xl:max-h-[330px] xl:max-w-[420px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
-                    </div>
-                </a>
-                <div class="flex justify-around items-center mb-2">
-                    <div class="flex items-center">
-                        <div class="flex items-center">
-                            <button id="1" class="w-6 lg:w-6 lg:h-6" onclick="DarLike('3')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="w-5 h-5 lg:w-6 lg:h-6">
-                            </button>
-                            <span class="textito font-bold text-[#241111] xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px] ml-1">35</span>
-                        </div>
-                        <a href="Publicacion.html">
-                            <button class="w-6 lg:w-6 lg:h-6 flex mr-5">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 ml-2">
-                                <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">14</span>
-                            </button>
-                        </a>
-                        <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Trochilidae</span>
-                        <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 mr-10 xl:mr-10">Animal: Colibrí</span>    
-                    </div>
-                    <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                        <button class="top-1 right-3 relative " @click="open = !open">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true">
-                        </button>
-                        <div class="absolute bg-white border rounded -mt-3 -ml-36" x-show="open" @click.away="open = false">
-                            <button class="block w-[11rem]" onclick="editarComentario('3')">
-                                <a class="flex px-2 py-1 text-sm">
-                                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Edit.png?raw=true" alt="" class="h-4 w-4 ml-2 mr-2">
-                                    <p>Editar comentario</p>
-                                </a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         <div class="relative">
             <section class="fixed border-[1.5px] border-slate-300 rounded-xl w-64 lg:w-64 xl:h-[380px] h-[300px] right-0 mr-10 mt-[9.6rem] hidden lg:block xl:block 2xl:block">
@@ -525,6 +336,7 @@
     </div>
     <script src="index.js"></script>
     <script src="perfil_admin.js"></script>
+    <script src="Inicio_Admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
     <script src="/Front - Proyecto/src/index.js"></script>
 </body>
