--- a/Front - Proyecto/src/Usuario/Publicaciones.html
+++ b/Front - Proyecto/src/Usuario/Publicaciones.html
@@ -10,7 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
-
+        
 
     h1, h2{
         font-family: "Roboto", sans-serif;
@@ -187,7 +187,7 @@
             <div class="mt-4 mb-6">
                 <hr>
                 <div class="flex mt-6">
-                    <a href="#">Cerrar Sesión</a>
+                    <a href="/Front - Proyecto/src/Flora y Fauna UTP - inicio.html">Cerrar Sesión</a>
                     <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Sign_out_squre_light.png?raw=true" class="ml-3" alt="Sing out">
                 </div>
             </div>
@@ -235,7 +235,7 @@
                         <h3>Nombre científico</h3>
                         <input type="text" id="n_cientifico" class="shadow-md p-2 border rounded-lg mb-2 focus:outline-none h-10 w-full" placeholder="Ingrese el nombre científico...">
                         <h3>Lugar</h3>
-                        <select  id="lugar" class="shadow-md p-2 border rounded-lg mb-2 focus:outline-none w-full text-gray-400">
+                        <select id="lugar" class="shadow-md p-2 border rounded-lg mb-2 focus:outline-none w-full text-gray-400">
                             <option disabled selected>Seleccione un lugar</option>
                             <option>Campus Levi Sasso</option>
                             <option>Ext. Sede Tocumen</option>
@@ -343,6 +343,7 @@
             </section>
         </div>                                                                    <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="index.js"></script>
     <script src="perfil.js"></script>
     <script src="Publicaciones.js"></script>
