Actualización Usuario y Admin

--- a/Front - Proyecto/src/Usuario/Publicaciones.html
+++ b/Front - Proyecto/src/Usuario/Publicaciones.html
@@ -187,7 +187,7 @@
             <div class="mt-4 mb-6">
                 <hr>
                 <div class="flex mt-6">
-                    <a href="/Front - Proyecto/src/Flora y Fauna UTP - inicio.html">Cerrar Sesión</a>
+                    <a id="cerrar_S" href="/Front - Proyecto/src/Flora y Fauna UTP - inicio.html">Cerrar Sesión</a>
                     <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Sign_out_squre_light.png?raw=true" class="ml-3" alt="Sing out">
                 </div>
             </div>
@@ -289,24 +289,24 @@
             <section class="fixed hidden lg:block xl:block 2xl:block ml-20 mr-10 mt-[9.6rem] w-[350px]">
                 <div class="border-[1.5px] border-slate-300 lg:w-[350px] rounded-xl w-64 xl:h-[380px] h-[300px]">
                     <div class="bg-[#F0FEF8] h-8 rounded-t-xl w-[348px]">
-                        <h3 class="ml-32">Curiosidades</h3>
+                        <h3 class="ml-32">¿Sabiás que...?</h3>
                     </div>
                     <ul class="slider w-64 h-[290px] overflow-hidden xl:text-sm text-[12px] mt-3">
                         <li id="slide1" class="absolute ml-8 mr-8">
-                            <p class="text-justify">¿Sabiás que...? Este pequeño roedor conocido como "Ñeque" desarrolla la destreza de
+                            <p class="text-justify">Este pequeño roedor conocido como "Ñeque" desarrolla la destreza de
                                 identificar el sonido de frutos cayendo para encontrar su comida, también le encanta enterrar semillas,
                                 contribuyendo al crecimiento de nuevos árboles.</p>
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%B1eque.png?raw=true" class="ml-6 mt-3 w-60 mr-5 xl:h-[170px] h-[120px] rounded-md" />
                         </li>
                         <li id="slide2" class="absolute ml-8 mr-8">
-                            <p class="text-justify">¿Sabiás que...? algunas especies de iguanas pueden cambiar de color para confundir a los depredadores,
+                            <p class="text-justify">Algunas especies de iguanas pueden cambiar de color para confundir a los depredadores,
                                 adoptando tonos más oscuros o más claros según la situación. ¡Una estrategia sorprendente en el mundo animal!</p>
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/iguana.jpg?raw=true" class="ml-6 mt-3 w-60 mr-5 xl:h-[170px] h-[120px] rounded-md" />
                         </li>
                         <li id="slide3" class="absolute ml-8 mr-8">
-                            <p class="text-justify">¿Sabiás que...? Los coatís adoran los árboles, tanto que crean nidos en estos, algo que no es muy típico de los mamíferos.
+                            <p class="text-justify">Los coatís adoran los árboles, tanto que crean nidos en estos, algo que no es muy típico de los mamíferos.
                                 También son animales muy sociables, conformados en su mayoría por hembras dominantes.</p>
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/gato%20solo.jpg?raw=true" class="ml-6 mt-3 w-60 mr-5 xl:h-[170px] h-[120px] rounded-md" />
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/gato%20solo.jpg?raw=true" class="ml-6 mt-6 w-60 mr-5 xl:h-[170px] h-[120px] rounded-md" />
                         </li>
         
                     </ul>
