--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/Solicitudes.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/Solicitudes.html
@@ -142,6 +142,7 @@
             <a href="/Front - Proyecto/src/Administrativo/Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
             <a href="/Front - Proyecto/src/Administrativo/CRUD'S/Estudiante.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
         </div>
+        <hr class="">
     </nav>
     
     <aside id="aside" class="fixed top-[4rem] h-screen w-screen bg-[#276B58] text-[#FFFFFF] z-[1] lg:hidden xl:hidden 2xl:hidden hidden">
@@ -151,67 +152,6 @@
                 <a href="/Front - Proyecto/src/Administrativo/Admin - Inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
             </div>
             
-            <div class="grid rounded-[10px] p-1">
-                <h3 class="font-bold">Categorias</h3>
-                <ul class="ml-2">
-                    <li>
-                        <button onclick="menuCategoria('flora')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                            Flora
-                        </button>
-                        <div>
-                            <ul class="grid ml-4">
-                                <li>
-                                    <button onclick="menuCategoria('hierbas')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                        Hierbas
-                                    </button>
-                                </li>
-                                <li>
-                                    <button onclick="menuCategoria('planta')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                        Planta
-                                    </button>
-                                </li>
-                                <li>
-                                    <button onclick="menuCategoria('arboles')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                        Árboles
-                                    </button>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <hr>
-                    <li class="mt-3 mb-3">
-                        <li>
-                            <button onclick="menuCategoria('fauna')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                Fauna
-                            </button>
-                            <div>
-                                <ul class="grid ml-4">
-                                    <li>
-                                        <button onclick="menuCategoria('aves')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                            Aves
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button onclick="menuCategoria('reptiles')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                            Reptiles
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button onclick="menuCategoria('artropodos')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                            Artrópodos
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button onclick="menuCategoria('mamiferos')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
-                                            Mamíferos
-                                        </button>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                    </li>
-                </ul>
-            </div>
             <div class="mt-4 mb-6">
                 <hr>
                 <div class="flex mt-6">
