--- a/Front - Proyecto/src/Auth/Registro.html
+++ b/Front - Proyecto/src/Auth/Registro.html
@@ -67,7 +67,7 @@
             </tbody>
           </table>
         </div>
-        <form action="#">
+        <form action="#" onsubmit="return false;">
           <div class="mt-4 ml-1">
             <label class="text-white text-sm">Ingrese su correo electrónico</label>
             <input type="text" id="correoUsuario" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold tracking-normal text-left text-white placeholder-white placeholder-opacity-[0.75] focus:outline-none mt-2" placeholder="Correo electrónico" required>
