--- a/Front - Proyecto/src/Auth/login.html
+++ b/Front - Proyecto/src/Auth/login.html
@@ -15,7 +15,7 @@
             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_square_duotone.png?raw=true" alt="cerrar" class="h-10 w-10">
           </button>
       </div>
-      <form action="#">
+      <form action="#" onsubmit="return false;">
         <div class="mt-5">
           <input type="text" id="nombreusuario" class="p-2 w-full h-12 rounded-full bg-white bg-opacity-15 font-inter text-xs md:text-sm lg:text-base font-bold leading-6 tracking-normal text-left text-white placeholder-white placeholder-text-sm placeholder-opacity-[0.75] focus:outline-none" placeholder="Nombre de usuario">
         </div>
