--- a/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
+++ b/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
@@ -135,46 +135,66 @@
         <div class="mt-5 ml-10 mr-10">
             <div class="flex items-center mb-3">
                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/home-white.png?raw=true">
-                <a href="#" class="ml-2 text-lg font-bold">Inicio</a>
+                <a href="Flora y Fauna UTP - inicio.html" class="ml-2 text-lg font-bold">Inicio</a>
             </div>
             <div class="grid rounded-[10px] p-1">
                 <h3 class="font-bold">Categorias</h3>
                 <ul class="ml-2">
-                    <li class="mb-3">
-                        <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Flora</a>
+                    <li>
+                        <button onclick="menuCategoria('flora')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                            Flora
+                        </button>
                         <div>
                             <ul class="grid ml-4">
                                 <li>
-                                    <a href="#" class="hover:underline cursor-pointer hover:text-[#defdfb]">Hierbas</a>
+                                    <button onclick="menuCategoria('hierbas')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                        Hierbas
+                                    </button>
                                 </li>
                                 <li>
-                                    <a href="#" class="hover:underline cursor-pointer hover:text-[#defdfb]">Planta</a>
+                                    <button onclick="menuCategoria('planta')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                        Planta
+                                    </button>
                                 </li>
                                 <li>
-                                    <a href="#" class="hover:underline cursor-pointer hover:text-[#defdfb]">Árboles</a>
+                                    <button onclick="menuCategoria('arboles')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                        Árboles
+                                    </button>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <hr>
                     <li class="mt-3 mb-3">
-                        <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Fauna</a>
-                        <div>
-                            <ul class="grid ml-4">
-                                <li>
-                                    <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Aves</a>
-                                </li>
-                                <li>
-                                    <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Reptiles</a>
-                                </li>
-                                <li>
-                                    <a href="" class="hover:underline cursor-pointer hover:text-[#defdfb]">Artrópodos</a>
-                                </li>
-                                <li>
-                                    <a href=""  class="hover:underline cursor-pointer hover:text-[#defdfb]">Mamíferos</a>
-                                </li>
-                            </ul>
-                        </div>
+                        <li>
+                            <button onclick="menuCategoria('fauna')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                Fauna
+                            </button>
+                            <div>
+                                <ul class="grid ml-4">
+                                    <li>
+                                        <button onclick="menuCategoria('aves')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Aves
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button onclick="menuCategoria('reptiles')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Reptiles
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button onclick="menuCategoria('artropodos')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Artrópodos
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button onclick="menuCategoria('mamiferos')" class="hover:underline cursor-pointer hover:text-[#c6d7d2]" >
+                                            Mamíferos
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                     </li>
                 </ul>
             </div>
@@ -210,37 +230,55 @@
                     <h3 class="text-lg">Categorias</h3>
                     <ul class="ml-2">
                         <li>
-                            <a href="" class="hover:underline cursor-pointer hover:text-[#276B58]">Flora</a>
+                            <button onclick="menuCategoria('flora')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                Flora
+                            </button>
                             <div>
                                 <ul class="grid ml-4">
                                     <li>
-                                        <a href="#" class="hover:underline cursor-pointer hover:text-[#276B58]">Hierbas</a>
+                                        <button onclick="menuCategoria('hierbas')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                            Hierbas
+                                        </button>
                                     </li>
                                     <li>
-                                        <a href="#" class="hover:underline cursor-pointer hover:text-[#276B58]">Planta</a>
+                                        <button onclick="menuCategoria('planta')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                            Planta
+                                        </button>
                                     </li>
                                     <li>
-                                        <a href="#" class="hover:underline cursor-pointer hover:text-[#276B58]">Árboles</a>
+                                        <button onclick="menuCategoria('arboles')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                            Árboles
+                                        </button>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <hr>
                         <li>
-                            <a href="" class="hover:underline cursor-pointer hover:text-[#276B58]">Fauna</a>
+                            <button onclick="menuCategoria('fauna')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                Fauna
+                            </button>
                             <div>
                                 <ul class="grid ml-4">
                                     <li>
-                                        <a href="" class="hover:underline cursor-pointer hover:text-[#276B58]">Aves</a>
+                                        <button onclick="menuCategoria('aves')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                            Aves
+                                        </button>
                                     </li>
                                     <li>
-                                        <a href="" class="hover:underline cursor-pointer hover:text-[#276B58]">Reptiles</a>
+                                        <button onclick="menuCategoria('reptiles')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                            Reptiles
+                                        </button>
                                     </li>
                                     <li>
-                                        <a href="" class="hover:underline cursor-pointer hover:text-[#276B58]">Artrópodos</a>
+                                        <button onclick="menuCategoria('artropodos')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                            Artrópodos
+                                        </button>
                                     </li>
                                     <li>
-                                        <a href=""  class="hover:underline cursor-pointer hover:text-[#276B58]">Mamíferos</a>
+                                        <button onclick="menuCategoria('mamiferos')" class="hover:underline cursor-pointer hover:text-[#276B58]" >
+                                            Mamíferos
+                                        </button>
                                     </li>
                                 </ul>
                             </div>
