--- a/Front - Proyecto/src/Usuario/Publicaciones.html
+++ b/Front - Proyecto/src/Usuario/Publicaciones.html
@@ -86,7 +86,7 @@
                 
                 <button id="mostrarPerfil">
                     <a href="">
-                        <img id="imgPerfil" alt="user" class="w-12 h-12 rounded-full ml-2">
+                        <img id="imgPerfil" alt="user" class="w-12 h-12 ml-2">
                     </a>
                 </button>
             </div>
