--- a/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
+++ b/Front - Proyecto/src/Flora y Fauna UTP - inicio.html
@@ -223,7 +223,7 @@
             <div class="hidden lg:block xl:block 2xl:block fixed top-28 left-10 w-48">
                 <div class="flex items-center mb-3">
                     <img src="https://raw.githubusercontent.com/saunpain/FloraFaunaUTP/50daf7ed36a5a8015d324c85c61abd28b9c2f15a/img/home-03.svg">
-                    <a href="#" class="ml-2 text-lg">Inicio</a>
+                    <a href="Flora y Fauna UTP - inicio.html" class="ml-2 text-lg">Inicio</a>
                 </div>
                 <hr>
                 <div class="bg-[#F0FEF8] grid mt-3 rounded-[10px] p-4 border-[1.5px] border-slate-300">
